# Nekomaru-LiveUI-v2

./: .gitignore  .justfile  .mod.nu  Cargo.toml  FILE-OWNERSHIP.md  README.md  vite.config.ts
app/: Cargo.toml
app/src/: main.rs
core/live-app/src/: main.rs
core/live-audio/: Cargo.toml
core/live-audio/src/: lib.rs  main.rs
core/live-capture/: Cargo.toml
core/live-capture/src/: encoder.rs  lib.rs  main.rs
core/live-kpm/: Cargo.toml
core/live-kpm/src/: lib.rs  main.rs
crates/enumerate-windows/: Cargo.toml
crates/enumerate-windows/src/: lib.rs
crates/job-object/: Cargo.toml
crates/job-object/src/: lib.rs
crates/set-dpi-awareness/: Cargo.toml
crates/set-dpi-awareness/src/: lib.rs
docs/: ARCHIVE-0-Prototype.md  ARCHIVE-1-StreamID.md  PLAN-UI-AudioMeter.md  README-Audio.md  README.md
frontend/: app.tsx  biome.json  components.json  debug.ts  global.css  global.effects.css  index.html  index.tsx  package.json  streamDecoder.ts  streamRenderer.tsx  tsconfig.json  vite.config.ts
frontend/src/: api.ts  app.tsx  kpm.tsx  streamDecoder.ts  streamRenderer.tsx  streams.ts  strings-api.ts  strings.ts  ws.ts  youtube-music.ts
frontend/src/audio/: index.tsx  sync.ts  worklet.ts
frontend/src/components/: grid.tsx  marquee.tsx
frontend/src/kpm/: index.tsx
frontend/src/stream/: decoder.ts  index.tsx
frontend/src/video/: chroma-key.ts  decoder.ts  index.tsx
frontend/src/widgets/: clock.tsx  common.tsx  index.tsx
live-audio/src/: lib.rs  main.rs
live-kpm/: Cargo.toml
live-kpm/src/: lib.rs  main.rs
live-server/: Cargo.toml
live-server/src/: constant.rs  main.rs  state.rs  vite_proxy.rs
live-server/src/audio/: buffer.rs  process.rs  routes.rs  ws.rs
live-server/src/kpm/: calculator.rs  mod.rs  process.rs  routes.rs
live-server/src/selector/: config.rs  manager.rs  routes.rs
live-server/src/strings/: routes.rs  store.rs
live-server/src/video/: buffer.rs  process.rs  routes.rs  ws.rs
live-server/src/youtube_music/: manager.rs
live-server/src/ytm/: manager.rs
live-video/src/: main.rs
server/: api.ts  audio-api.ts  audio-buffer.ts  audio-protocol.ts  audio.ts  biome.json  buffer.ts  common.ts  index.ts  kpm-api.ts  kpm-buffer.ts  kpm-protocol.ts  kpm.ts  package.json  persist.ts  process.ts  selector.ts  strings.ts  youtube-music.ts
service/capture/: Cargo.toml
service/capture/src/: capture.rs  converter.rs  d3d11.rs  encoder.rs  lib.rs  main.rs  resample.hlsl  resample.rs
service/capture/src/encoder/: debug.rs  helper.rs
shaders/: scaler.hlsl
src/: app.rs  capture.rs  encoder.rs  encoding_thread.rs  main.rs  resample.rs  stream.rs
src/app/: capture_selector.rs  helper.rs
