[workspace]
resolver = "3"
members = [
    "core/live-app",
    "core/live-capture",
    "core/live-control",
    "crates/enumerate-windows",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies.nkcore]
git = "git://nekomaru-ubuntu/Nekomaru-Rust.git"
rev = "8e9853c8"

[workspace.dependencies.ngd3dcompile]
git = "git://nekomaru-ubuntu/Nekomaru-Graphics-2025.git"
rev = "bac5bb90"
package = "ngd3dcompile_macro"

[workspace.dependencies.winrt-capture]
git = "git://nekomaru-ubuntu/Nekomaru-Rust.git"
rev = "8e9853c8"

[workspace.dependencies]
enumerate-windows = { path = "crates/enumerate-windows" }

# bytemuck = { version = "1.24.0", features = ["derive", "const_zeroed"] }
# glam = { version = "0.30.9", features = ["approx", "bytemuck", "glam-assert"] }
# cfg-if = "1.0.4"

base64 = "0.22"    # Base64 encoding for SPS/PPS in protocol handler
clap = { version = "4", features = ["derive"] }
crossbeam = "0.8"  # Lock-free queue for stream manager
log = "0.4.29"
pretty_env_logger = "0.5.0"
pretty-name = "0.4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"   # JSON serialization for protocol responses
tap = "1.0.1"
widestring = "1.2.1"

# LOCK: wry@0.54.2 depends on windows@^0.61
windows = { version = "0.62.2", features = [
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "UI",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT_Direct3D11",
    "Win32_UI_HiDpi",
    "Win32_UI_WindowsAndMessaging",
]}

[workspace.dependencies.egui]
version = "0.33.3"
default-features = false
features = ["default_fonts"]

[workspace.dependencies.eframe]
version = "0.33.3"
default-features = false
features = ["default_fonts", "glow"]

[workspace.dependencies.reqwest]
version = "0.12.28"
default-features = false
features = ["blocking", "json", "rustls-tls"]

[workspace.dependencies.winit]
version = "0.30.9"
default-features = false
features = ["rwh_06"]

[workspace.dependencies.wry]
version = "0.54.2"
default-features = false
features = ["devtools", "protocol"]

[workspace.lints.clippy]
cargo       = { level = "warn", priority = -1 }
nursery     = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

# #I-language cargo
cargo_common_metadata = "allow"
multiple_crate_versions = "allow" # can be fixed using `allowed-duplicate-crates`

# I-language #pedantic
doc_markdown = "allow" # allow non-words in docs without requiring backticks

# I-language #restriction
arbitrary_source_item_ordering = "allow"
as_conversions = "allow"
big_endian_bytes = "allow" # allows using `to_be_bytes` and `from_be_bytes`
blanket_clippy_restriction_lints = "allow"
default_numeric_fallback = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
implicit_return = "allow"
indexing_slicing = "allow"
let_underscore_must_use = "allow" # allows ignoring results of functions marked `#[must_use]`
let_underscore_untyped = "allow"
little_endian_bytes = "allow" # allows using `to_le_bytes` and `from_le_bytes`
missing_docs_in_private_items = "allow"
missing_inline_in_public_items = "allow"
missing_trait_methods = "allow"
panic = "allow"
print_stderr = "allow"
print_stdout = "allow"
pub_use = "allow"
question_mark_used = "allow"
ref_patterns = "allow"
self_named_module_files = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
single_call_fn = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
unwrap_used = "allow"
while_float = "allow"
wildcard_enum_match_arm = "allow"

# II-language-arithmetic-and-casting #pedantic
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

# II-language-arithmetic-and-casting #restriction
arithmetic_side_effects = "allow"
float_arithmetic = "allow"
float_cmp = "allow"
integer_division = "allow"
integer_division_remainder_used = "allow"
modulo_arithmetic = "allow"

# III-conflicting-lints #complexity
needless_borrowed_reference = "allow" # or: `clippy::pattern_type_mismatch`

# III-conflicting-lints #style
needless_else = "allow" # or: `clippy::else_if_without_else`

# III-conflicting-lints #restriction
pub_with_shorthand = "allow"  # xor: `clippy::pub_without_shorthand`
semicolon_outside_block = "allow"  # xor: `clippy::semicolon_inside_block`
unseparated_literal_suffix = "allow"  # xor: `clippy::separated_literal_suffix`

# IV-code-style #style
doc_overindented_list_items = "allow" # allows using 4 spaces for indenting docs
manual_range_contains = "allow" # makes graphics code less noisy
match_ref_pats = "allow" # just looks cool XD

# IV-code-style #nursery
option_if_let_else = "allow" # makes code more readable in many cases
suboptimal_flops = "allow" # makes graphics code less noisy

# IV-code-style #pedantic
if_not_else = "allow" # helps clarity in many cases
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow" # e.g.: `winit::window::WindowBuilder`
must_use_candidate = "allow"
wildcard_imports = "allow"

# IV-code-style #restriction
as_underscore = "allow"
absolute_paths = "allow"
impl_trait_in_params = "allow"
min_ident_chars = "allow"
mod_module_files = "allow"
multiple_inherent_impl = "allow"
try_err ="allow"
