[package]
name = "live-server"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
enumerate-windows = { workspace = true }
set-dpi-awareness = { workspace = true }
job-object = { workspace = true }
live-video = { workspace = true }
live-audio = { workspace = true }
live-kpm = { workspace = true }

axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["env"] }
log = { workspace = true }
pretty_env_logger = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
win32-version-info = { workspace = true }
