[package]
name = "live-audio"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
widestring = { workspace = true }

windows = { workspace = true, features = [
    "Win32_Devices_FunctionDiscovery",
    "Win32_Media_Audio",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Shell_PropertiesSystem",
] }
