[package]
name = "live-capture"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
enumerate-windows = { workspace = true }
log = { workspace = true }
ngd3dcompile = { workspace = true }
nkcore = { workspace = true, features = ["debug"] }
pretty-name = { workspace = true }
serde_json = { workspace = true }
widestring = { workspace = true }
windows = { workspace = true }
winrt-capture = { workspace = true }
