[package]
name = "live-capture"
version = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
clap = { workspace = true }
enumerate-windows = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
ngd3dcompile = { workspace = true }
nkcore = { workspace = true, features = ["debug"] }
pretty-name = { workspace = true }
serde_json = { workspace = true }
widestring = { workspace = true }
winrt-capture = { workspace = true }

windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_HiDpi",
] }
