[package]
name = "live-capture"
version = "0.1.0"
edition = "2024"

[lib]
name = "live_capture"
path = "src/lib.rs"

[[bin]]
name = "live-capture"
path = "src/main.rs"

[lints]
workspace = true

[dependencies.nkcore]
git = "git://nekomaru-ubuntu/Nekomaru-Rust.git"
rev = "7e5d8946"
features = ["debug"]

[dependencies.ngd3dcompile]
git = "git://nekomaru-ubuntu/Nekomaru-Graphics-2025.git"
rev = "bac5bb90"
package = "ngd3dcompile_macro"

[dependencies.winrt-capture]
git = "git://nekomaru-ubuntu/Nekomaru-Rust.git"
rev = "7e5d8946"

[dependencies]
pretty-name = "0.4.5"
pretty_env_logger = "0.5.0"
widestring = "1.2.1"

windows = { version = "0.62.2", features = [
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_WinRT_Direct3D11",
]}
